[project]
name = "pyforge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Charles Azam", email = "azamcharles0@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.4",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pint>=0.24.4",
    "streamlit>=1.45.1",
    "typer>=0.15.4",
    "logging>=0.4.9.6",
    "coloredlogs>=15.0.1",
    "pytest>=8.3.5",
    "black>=25.1.0",
    "isort>=6.0.1",
    "tabulate>=0.9.0",
    "gitpython>=3.1.44",
    "scipy>=1.15.3",
]

[project.scripts]
pyforge = "pyforge.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
