[project]
name = "pyforge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Charles Azam", email = "azamcharles0@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.4",
    "pint>=0.24.4",
    "streamlit>=1.45.1",
    "typer>=0.15.4",
    "logging>=0.4.9.6",
    "pytest>=8.3.5",
    "pandas",
    "coloredlogs",
    "tabulate",
    "scipy",
    "matplotlib",
]

[project.scripts]
pyforge = "pyforge.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
